k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-app
  namespace: default
  labels:
    app: taskflow-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskflow-app
  template:
    metadata:
      labels:
        app: taskflow-app
    spec:
      containers:
        - name: taskflow-app
          image: anuragdevops03/taskflow:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
