k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskflow-service
  namespace: default
spec:
  selector:
    app: taskflow-app        
  ports:
    - protocol: TCP
      port: 80               
      targetPort: 8000        
  type: ClusterIP
